Adding some documentation

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -15,3 +15,11 @@ $yellow:  #ffc107;
 $green:   #28a745;
 $teal:    #20c997;
 $cyan:    #17a2b8;
+
+// background
+$body-bg: #2D2E31;
+$body-color: #9A9A9A;
+
+// cards
+$card-cap-bg: #415047;
+$card-bg: #353639;
