--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,6 +4,17 @@
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
 // Color system
+$white:    #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529 ;
+$black:    #000;
 
 $blue:    #007bff;
 $indigo:  #6610f2;
@@ -23,3 +34,12 @@ $body-color: #9A9A9A;
 // cards
 $card-cap-bg: #415047;
 $card-bg: #353639;
+
+// forms and input controls
+//$input-bg:                              $gray-200;
+$input-disabled-bg:                     $gray-200;
+
+$input-color:                           $gray-700 ;
+// $input-border-color:                    $gray-400 ;
+// $input-border-width:                    $input-btn-border-width;
+$input-box-shadow:                      inset 0 1px 1px rgba($black, .075); 
