--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -16,7 +16,7 @@ $gray-800: #343a40;
 $gray-900: #212529 ;
 $black:    #000;
 
-$blue:    #007bff;
+$blue:    #007bcc;
 $indigo:  #6610f2;
 $purple:  #6f42c1;
 $pink:    #e83e8c;
@@ -36,7 +36,7 @@ $card-cap-bg: #415047;
 $card-bg: #353639;
 
 // forms and input controls
-//$input-bg:                              $gray-200;
+$input-bg:                              $gray-200;
 $input-disabled-bg:                     $gray-200;
 
 $input-color:                           $gray-700 ;
