--- a/src/sass/_auth.scss
+++ b/src/sass/_auth.scss
@@ -6,16 +6,16 @@
 } 
  
 #ios { 
-    background-image: url('/images/ios-app-store.svg'); 
+    background-image: url('/static/ios-app-store.svg'); 
     float:left; 
 } 
  
 #android { 
-    background-image: url('/images/googleplay.svg'); 
+    background-image: url('/static/googleplay.svg'); 
     float:left; 
 } 
  
 #windows { 
-    background-image: url('/images/get-it-from-MS.png'); 
+    background-image: url('/static/get-it-from-MS.png'); 
     float:left; 
 } 
