more css customization

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,4 +1,5 @@
-@import "variables";
+@import 'functions';
+@import 'variables';
 @import 'auth';
 @import 'main';
 @import '~bootstrap/scss/bootstrap';
