--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -16,7 +16,7 @@ $gray-800: #343a40;
 $gray-900: #212529 ;
 $black:    #000;
 
-$blue:    #007bcc;
+$blue:    #006699; //#007bcc;
 $indigo:  #6610f2;
 $purple:  #6f42c1;
 $pink:    #e83e8c;
@@ -26,6 +26,52 @@ $yellow:  #ffc107;
 $green:   #28a745;
 $teal:    #20c997;
 $cyan:    #17a2b8;
+
+$colors: ();
+// stylelint-disable-next-line scss/dollar-variable-default
+$colors: map-merge(
+  (
+    "blue":       $blue,
+    "indigo":     $indigo,
+    "purple":     $purple,
+    "pink":       $pink,
+    "red":        $red,
+    "orange":     $orange,
+    "yellow":     $yellow,
+    "green":      $green,
+    "teal":       $teal,
+    "cyan":       $cyan,
+    "white":      $white,
+    "gray":       $gray-600,
+    "gray-dark":  $gray-800
+  ),
+  $colors
+);
+
+$primary:       $blue;
+$secondary:     $gray-600;
+$success:       $green;
+$info:          $cyan;
+$warning:       $yellow;
+$danger:        $red;
+$light:         $gray-100;
+$dark:          $gray-800;
+
+$theme-colors: () ;
+// stylelint-disable-next-line scss/dollar-variable-default
+$theme-colors: map-merge(
+  (
+    "primary":    $primary,
+    "secondary":  $secondary,
+    "success":    $success,
+    "info":       $info,
+    "warning":    $warning,
+    "danger":     $danger,
+    "light":      $light,
+    "dark":       $dark
+  ),
+  $theme-colors
+);
 
 // background
 $body-bg: #2D2E31;
@@ -43,3 +89,12 @@ $input-color:                           $gray-700 ;
 // $input-border-color:                    $gray-400 ;
 // $input-border-width:                    $input-btn-border-width;
 $input-box-shadow:                      inset 0 1px 1px rgba($black, .075); 
+
+// links
+$link-color:                              theme-color("secondary");
+$link-hover-color:                        lighten($link-color, 15%);
+
+// list-groups
+$list-group-bg: $gray-700;
+$list-group-color: $gray-500;
+$list-group-hover-bg: $gray-500;
