--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -82,8 +82,9 @@ $card-cap-bg: #415047;
 $card-bg: #353639;
 
 // forms and input controls
-$input-bg:                              $gray-200;
+$input-bg:                              $gray-500;
 $input-disabled-bg:                     $gray-200;
+$input-group-addon-bg:                  $gray-500;
 
 $input-color:                           $gray-700 ;
 // $input-border-color:                    $gray-400 ;
