add developer group

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -85,6 +85,7 @@ $card-bg: #353639;
 $input-bg:                              $gray-500;
 $input-disabled-bg:                     $gray-200;
 $input-group-addon-bg:                  $gray-500;
+$component-active-bg: $green;
 
 $input-color:                           $gray-700 ;
 // $input-border-color:                    $gray-400 ;
