--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -100,3 +100,6 @@ $link-hover-color:                        lighten($link-color, 15%);
 $list-group-bg: $gray-700;
 $list-group-color: $gray-500;
 $list-group-hover-bg: $gray-500;
+
+// typography
+$code-color: $orange;
