--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,7 +2,28 @@
 //
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
+$white:    #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black:    #000;
 
+$blue:    #007bff;
+$indigo:  #6610f2;
+$purple:  #6f42c1;
+$pink:    #e83e8c;
+$red:     #dc3545;
+$orange:  #fd7e14;
+$yellow:  #ffc107;
+$green:   #28a745;
+$teal:    #20c997;
+$cyan:    #17a2b8;
 
 // background
 $body-bg: #2D2E31;
@@ -10,6 +31,7 @@ $body-color: #9A9A9A;
 
 // Components
 $component-active-bg: darken($green,15%);
+$component-active-color: $white;
 
 // cards
 $card-cap-bg: #415047;
